[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/elefante/elefanteteste.png" type="Texture" id=1]
[ext_resource path="res://cenas/elefante.gd" type="Script" id=2]
[ext_resource path="res://sprites/elefante/elefanteteste4.png" type="Texture" id=3]
[ext_resource path="res://sprites/pais.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/elefante/elefanteteste2.png" type="Texture" id=5]
[ext_resource path="res://sprites/elefante/elefanteteste3.png" type="Texture" id=6]
[ext_resource path="res://soundtrack/pokemon_firered_leafgreen_route_1_-3417508122376783429 (online-audio-converter.com).wav" type="AudioStream" id=7]
[ext_resource path="res://cenas/fase1.gd" type="Script" id=8]
[ext_resource path="res://sprites/azul.png" type="Texture" id=9]
[ext_resource path="res://fonte/Monday Monkey.otf" type="DynamicFontData" id=10]
[ext_resource path="res://sound effects/happy_kids_sound_effect_4623491656417256917 (online-audio-converter.com).wav" type="AudioStream" id=11]
[ext_resource path="res://sound effects/mouse_click_sound_effect_hd_uvvf6XIByoK-gucZrU_h (online-audio-converter.com).wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 313, 313 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="GDScript" id=5]
script/source = "extends Area2D
var dragMouse = false

func _process(delta):
	if(dragMouse):
		set_position(get_viewport().get_mouse_position())




func _on_Area2D_input_event(viewport, event, shape_idx):
	if event is InputEventMouseButton:
		if event.is_pressed():
			dragMouse = true
		else:
			dragMouse = false
"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 313, 313 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="GDScript" id=9]
script/source = "extends Area2D
var dragMouse = false

func _process(delta):
	if(dragMouse):
		set_position(get_viewport().get_mouse_position())




func _on_Area2D_input_event(viewport, event, shape_idx):
	if event is InputEventMouseButton:
		if event.is_pressed():
			dragMouse = true
		else:
			dragMouse = false
"

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 313, 313 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=12]

[sub_resource type="GDScript" id=13]
script/source = "extends Area2D
var dragMouse = false

func _process(delta):
	if(dragMouse):
		set_position(get_viewport().get_mouse_position())




func _on_Area2D_input_event(viewport, event, shape_idx):
	if event is InputEventMouseButton:
		if event.is_pressed():
			dragMouse = true
		else:
			dragMouse = false
"

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 313, 313 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=16]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="paisagem" type="Sprite" parent="."]
position = Vector2( 512.812, 304.114 )
scale = Vector2( 1.63917, 1.70621 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 371.23
margin_top = 20.1515
margin_right = 663.23
margin_bottom = 96.1515
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Primeira Fase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 312.013
margin_top = 505.221
margin_right = 746.013
margin_bottom = 581.221
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Que animal Ã© esse ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 514, 293 )
scale = Vector2( 0.715618, 0.953328 )
texture = ExtResource( 9 )

[node name="ElefDirCima" type="Area2D" parent="."]
position = Vector2( 858.753, 208.25 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefDirCima"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ElefDirCima"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="ElefDirCima" groups=[
"ElefDirCima",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefDirCima/Area2D"]
shape = SubResource( 3 )

[node name="ConfirmDirCima" type="Area2D" parent="." groups=[
"ConfirmDirCima",
]]
position = Vector2( 608, 199 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfirmDirCima"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 4 )

[node name="ElefDirBaixo" type="Area2D" parent="."]
position = Vector2( 858.142, 460.034 )
scale = Vector2( 0.3, 0.3 )
script = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefDirBaixo"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="ElefDirBaixo"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="ElefDirBaixo" groups=[
"ElefDirBaixo",
]]
position = Vector2( -0.00012207, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefDirBaixo/Area2D"]
shape = SubResource( 7 )

[node name="ConfirmDirBaixo" type="Area2D" parent="." groups=[
"ConfirmDirBaixo",
]]
position = Vector2( 608, 387 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfirmDirBaixo"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 8 )

[node name="ElefEsqBaixo" type="Area2D" parent="."]
position = Vector2( 167.888, 451.217 )
scale = Vector2( 0.3, 0.3 )
script = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefEsqBaixo"]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="ElefEsqBaixo"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="ElefEsqBaixo" groups=[
"ElefEsqBaixo",
]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefEsqBaixo/Area2D"]
shape = SubResource( 11 )

[node name="ConfirmEsqBaixo" type="Area2D" parent="." groups=[
"ConfirmEsqBaixo",
]]
position = Vector2( 420, 387 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfirmEsqBaixo"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 12 )

[node name="ElefEsqCima" type="Area2D" parent="."]
position = Vector2( 185.655, 202.78 )
scale = Vector2( 0.3, 0.3 )
script = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefEsqCima"]
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="ElefEsqCima"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="ElefEsqCima" groups=[
"ElefEsqCima",
]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElefEsqCima/Area2D"]
shape = SubResource( 15 )

[node name="ConfirmEsqCima" type="Area2D" parent="." groups=[
"ConfirmEsqCima",
]]
position = Vector2( 420, 199 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfirmEsqCima"]
position = Vector2( 6.10352e-05, 0 )
shape = SubResource( 16 )

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="kidsYeah" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="tempo" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 167.888, 192.273 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 882.941, 199 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 882.941, 451.217 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 167.888, 451.217 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
[connection signal="input_event" from="ElefDirCima" to="ElefDirCima" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="ConfirmDirCima" to="." method="_on_ConfirmDirCima_area_entered"]
[connection signal="area_exited" from="ConfirmDirCima" to="." method="_on_ConfirmDirCima_area_exited"]
[connection signal="input_event" from="ElefDirBaixo" to="ElefDirBaixo" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="ConfirmDirBaixo" to="." method="_on_ConfirmDirBaixo_area_entered"]
[connection signal="input_event" from="ElefEsqBaixo" to="ElefEsqBaixo" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="ConfirmEsqBaixo" to="." method="_on_ConfirmEsqBaixo_area_entered"]
[connection signal="input_event" from="ElefEsqCima" to="ElefEsqCima" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="ConfirmEsqCima" to="." method="_on_ConfirmEsqCima_area_entered"]
[connection signal="timeout" from="tempo" to="." method="_on_tempo_timeout"]
